# cpp-graph-autodiff

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
bazel-registry/modules/cpp-graph-autodiff/: metadata.json
bazel-registry/modules/cpp-graph-autodiff/0.1-alpha/: MODULE.bazel  source.json
graph_autodiff/: BUILD.bazel  graph.cpp  graph.h  graph.proto  graph_test.cpp
src/: BUILD.bazel  graph.cpp  graph.h  graph.proto
tests/: BUILD.bazel  test.cpp
