load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "graph_autodiff",
    srcs = ["graph.cpp"],
    hdrs = ["graph.h"],
    deps = [
        ":graph_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@fmt//:fmt",
        "@eigen//:eigen"
    ],
    visibility = ["//visibility:public"]
)

cc_proto_library(
    name = "graph_cc_proto",
    deps = [":graph_proto"],
)

proto_library(
    name = "graph_proto",
    srcs = ["graph.proto"],
)

cc_test(
  name = "graph_autodiff_test",
  size = "small",
  srcs = ["graph_test.cpp"],
  deps = [
    "@abseil-cpp//absl/status:statusor",
    "@googletest//:gtest_main",
    "//graph_autodiff"
  ],
)
